tests/ui/resolve/contract_special_functions.stderr
error: No visibility specified for fallback. Did you intend to add external?
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL | contract C {
   |          ^
   |

error: No visibility specified for fallback. Did you intend to add external?
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL | contract C {
   |          ^
   |

error: No visibility specified for receive. Did you intend to add external?
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL | contract C {
   |          ^
   |

error: No visibility specified for receive. Did you intend to add external?
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL | contract C {
   |          ^
   |

error: No visibility specified for fallback. Did you intend to add external?
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL | contract D {
   |          ^
   |

error: No visibility specified for fallback. Did you intend to add external?
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL | contract D {
   |          ^
   |

error: No visibility specified for fallback. Did you intend to add external?
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL | contract D {
   |          ^
   |

error: No visibility specified for receive. Did you intend to add external?
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL | contract D {
   |          ^
   |

error: No visibility specified for receive. Did you intend to add external?
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL | contract D {
   |          ^
   |

error: No visibility specified for receive. Did you intend to add external?
  --> ROOT/tests/ui/resolve/contract_special_functions.sol:LL:CC
   |
LL | contract D {
   |          ^
   |

error: aborting due to 10 previous errors

